tests/scripts/enum4.hk.err
error: 8:5 - Undefined variant 'None'
    None => println("None"),
    ^^^^
